# Break-0.1

./: .gitignore  Break.pro  CMakeLists.txt  KOKOTEST.txt  NBody.h  README.md  TestApplication.hpp  _.swp  main.cpp  premake5.lua
Graphics/: Break_Graphics.vcxproj  Break_Graphics.vcxproj.filters  CMakeLists.txt  Makefile  ShapeBatch.cpp
Graphics/inc/: Component.hpp  Entity.hpp  FP_Camera.h  FTRenderer.hpp  FontFace.h  Graphics.hpp  MathUtils.hpp  Model_3D.h  Rect.hpp  Scene3D.h  Shape.hpp  ShapeBatch.h  ShapeBatch.hpp  Sprite.hpp  SpriteBatch.hpp  Text.h  Transform.hpp
Graphics/src/: FP_Camera.cpp  FTRenderer.cpp  FontFace.cpp  MathUtils.cpp  Model_3D.cpp  Rect.cpp  Scene3D.cpp  ShapeBatch.cpp  SpriteBatch.cpp  Text.cpp  Transform.cpp
Infrastructure/: Break.pro  Break_Infrastructure.opensdf  Break_Infrastructure.sln  Break_Infrastructure.vcxproj  Break_Infrastructure.vcxproj.filters  CMakeLists.txt  Directory.cpp  SoundEffect.cpp  TestApplication.hpp  main.cpp
Infrastructure/inc/: API.hpp  AnimEvaluator.h  Application.hpp  Argument.hpp  Asset.hpp  AssetHelper.h  AssetManager.hpp  AssimpModelLoader.h  Block.h  DXBufferHandle.hpp  DXDevice.hpp  DXKeyboard.hpp  DXMouse.hpp  DXSamplerHandle.hpp  DXShaderHandle.hpp  DXTexture2DHandle.hpp  Directory.hpp  Engine.hpp  File.hpp  GLDevice.hpp  GLHandle.hpp  GLKeyboard.hpp  GLMouse.hpp  GLShaderHandle.hpp  GPUException.hpp  GPUHandle.hpp  GPUIns.hpp  GPUProgram.hpp  GPUResource.hpp  GPU_ISA.hpp  GPU_VM.hpp  Geometry.hpp  Globals.hpp  IGXDevice.hpp  ISet.hpp  Image.hpp  IndexBuffer.hpp  IndexSet.hpp  Infrastructure.hpp  InputDevice.hpp  (+39 more)
Infrastructure/src/: AnimEvaluator.cpp  Application.cpp  AssetManager.cpp  AssimpModelLoader.cpp  DXDevice.cpp  DXKeyboard.cpp  DXMouse.cpp  Directory.cpp  Engine.cpp  File.cpp  GLDevice.cpp  GLKeyboard.cpp  GLMouse.cpp  GPUProgram.cpp  GPU_VM.cpp  Globals.cpp  IGXDevice.cpp  Image.cpp  Keyboard.cpp  Linux32.cpp  Material.cpp  MathUtils.cpp  MemoryLayout.cpp  MemoryManager.cpp  Mesh.cpp  Mouse.cpp  Node.cpp  Object.cpp  RAMBuffer.cpp  Rect.cpp  ResourceLoader.cpp  SamplerState.cpp  SceneAnimator.cpp  Services.cpp  ShaderHelper.cpp  SoundDevice.cpp  SoundEffect.cpp  Texture.cpp  Texture2D.cpp  TimeManager.cpp  (+3 more)
Physics/: Break_Physics.vcxproj  Break_Physics.vcxproj.filters  Makefile
Physics/inc/: BlockAllocator.hpp  Body2D.hpp  BodyIsland.hpp  BoxBody.hpp  Break2D.hpp  BroadPhase.hpp  ChainCircleContact.hpp  ChainPolygonContact.hpp  ChainShape.hpp  Chains.hpp  CircleBody.hpp  CircleContact.hpp  CircleShape.hpp  Collision.hpp  Contact2D.hpp  ContactManager.hpp  ContactSolver.hpp  Distance.hpp  DistanceJoint.hpp  DynamicTree.hpp  EdgeCircleContact.hpp  EdgePolygonContact.hpp  EdgeShape.hpp  Fixture.hpp  FrictionJoint.hpp  GearJoint.hpp  GrowableStack.hpp  Joint2D.hpp  MotorJoint.hpp  MouseJoint.hpp  PTimeStep.hpp  Physics.hpp  PhysicsGlobals.hpp  PolygonCircleContact.hpp  PolygonContact.hpp  PolygonShape.hpp  PrismaticJoint.hpp  Profile.hpp  PullyJoint.hpp  RevoluteJoint.hpp  (+12 more)
Physics/src/: BlockAllocator.cpp  Body2D.cpp  BodyIsland.cpp  BoxBody.cpp  BroadPhase.cpp  ChainCircleContact.cpp  ChainPolygonContact.cpp  ChainShape.cpp  Chains.cpp  CircleBody.cpp  CircleCollision.cpp  CircleContact.cpp  CircleShape.cpp  Collision.cpp  Contact2D.cpp  ContactManager.cpp  ContactSolver.cpp  Distance.cpp  DistanceJoint.cpp  DynamicTree.cpp  EdgeCircleContact.cpp  EdgeCollision.cpp  EdgePolygonContact.cpp  EdgeShape.cpp  Fixture.cpp  FrictionJoint.cpp  GearJoint.cpp  Joint2D.cpp  MotorJoint.cpp  MouseJoint.cpp  Test.cpp  (+14 more)
TestFiles/: testFBXLoad.hpp
